fix (docs): Fix wrong data in swagger ui
