# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "description": "Authenticates the user the based on the credentials and returns a token which will be used to authorize requests as a bearer token",
+                "description": "Authenticates the user based on the credentials and returns a token which will be used to authorize requests as a bearer token",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,30 +19,12 @@
                 "summary": "Authenticate a user",
                 "parameters": [
                     {
-                        "description": "Username",
-                        "name": "username",
+                        "description": "User authentication credentials",
+                        "name": "authPayload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Student ID",
-                        "name": "studentId",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.UserAuthPayload"
                         }
                     }
                 ],
@@ -96,7 +78,7 @@
         },
         "/knust-server-status/badge": {
             "get": {
-                "description": "This sums up the status of the servers and returns an SVG badge as a summary from shields.io",
+                "description": "This sums up the status of the servers and returns a url to an SVG badge from shields.io",
                 "tags": [
                     "KNUST Servers"
                 ],
@@ -452,6 +434,9 @@
                 "description": {
                     "type": "string"
                 },
+                "featured_image": {
+                    "type": "string"
+                },
                 "slug": {
                     "type": "string"
                 },
@@ -474,6 +459,9 @@
                 },
                 "featured_image": {
                     "type": "string"
+                },
+                "read_time": {
+                    "type": "integer"
                 },
                 "source": {
                     "type": "string"
@@ -600,6 +588,9 @@
                 "programme": {
                     "type": "string"
                 },
+                "sem": {
+                    "type": "string"
+                },
                 "studentId": {
                     "type": "string"
                 },
@@ -666,6 +657,20 @@
                     "type": "string"
                 },
                 "semester": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserAuthPayload": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "studentId": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
