# internal/handlers/auth_handler.go
@@ -11,34 +11,31 @@ import (
 var authFunctions = auth.NewAuthFunctions()
 
 // @Summary Authenticate a user
-// @Description Authenticates the user the based on the credentials and returns a token which will be used to authorize requests as a bearer token
+// @Description Authenticates the user based on the credentials and returns a token which will be used to authorize requests as a bearer token
 // @Tags Auth
 // @Produce json
-// @Accept  json
-// @Param  username body string true "Username"
-// @Param  password body string true "Password"
-// @Param  studentId body string true "Student ID"
+// @Accept json
+// @Param authPayload body models.UserAuthPayload true "User authentication credentials"
 // @Success 200 {object} models.UserResponse
 // @Failure 500 {object} models.ErrorResponse
 // @Failure 401 {object} models.ErrorResponse
 // @Router /auth/login [post]
 func (h *Handlers) AuthHandler(c *gin.Context) {
 	var authPayload models.UserAuthPayload
-
 	err := c.BindJSON(&authPayload)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.ErrorResponse{
-			Message: "Couldn't authorize user. Please try again",
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Message: "Invalid request payload",
 		})
+		return
 	}
-
 	token, err := authFunctions.AuthenticateUser(authPayload)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{
 			Message: "Couldn't authorize user. Please try again",
 		})
+		return
 	}
-
 	c.JSON(http.StatusOK, models.UserResponse{
 		Message: "User authorized successfully",
 		Token:   token,
